<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <com.github.siyamed.shapeimageview.RoundedImageView
        android:id="@+id/profile_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.115"
        app:siRadius="6dp"
        app:siStrokeCap="round"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/short_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:text="@string/short_description"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@id/card_button"
        app:layout_constraintTop_toBottomOf="@id/profile_image" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toTopOf="@id/tv_date_build"
        app:layout_constraintTop_toBottomOf="@id/short_description">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/data_type_variable_menu" />

            <Button
                android:id="@+id/btn_second"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/operators_comparisons_menu" />

            <Button
                android:id="@+id/btn_third"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/control_flow_menu" />

            <Button
                android:id="@+id/btn_fourth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/function_menu" />

            <Button
                android:id="@+id/btn_fifth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/class_object_menu" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/tv_date_build"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:text="@string/date_build"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_button" />

</androidx.constraintlayout.widget.ConstraintLayout>